--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /RandomFight/x64/Debug
 /RandomFight/.vs/RandomFight/v15
 /RandomFight/RandomFight/x64/Debug
+/RandomFight/RandomFight/x64/Release
+/RandomFight/x64/Release
